Fixed bug where settings menu is cut when opened on mobile device

--- a/styles.css
+++ b/styles.css
@@ -563,17 +563,16 @@ input[type=number] {
     }
 
     #settingsContainer {
-        width: 100vw;
-        max-width: 100vw;
-        height: 100vh;
+        width: 100%;
+        max-width: 100%;
+        height: 100%;
         max-height: 100vh;
         border-radius: 0;
-        padding: 5px 10px;
+        padding: 0px 10px;
         border: none;
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
         background-color: transparent;
-        overflow-y: scroll;
     }
 
     #settingsContainer button {
